<resources>
    <string name="app_name">Recipe</string>
    <string name="email">Email</string>
    <string name="back">Back</string>
    <string name="pass">Password</string>
    <string name="register">Register</string>
    <string name="recommended">Recommended</string>
    <string name="category">Category</string>
    <string name="favorite">Favorite</string>
    <string name="logout">Log out</string>
    <string name="login">Log in</string>
    <string name="display">Display Name</string>
    <string name="home">Home</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <!-- Choose Menu -->
    <string name="choose_menu_header">แกง</string>

    <!--recipe-->
    <string name="sample_menu">ต้มยำกุ้งแม่น้ำมะพร้าวอ่อน</string>
    <string name="prepare_topic">สิ่งที่ต้องเตรียม</string>
    <string name="step_topic">ขั้นตอน</string>
    <string name="sample_prepare_item">1. หมู \n2. กุ้ง</string>

</resources>
